// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search.vue Rendering should render empty state correctly 1`] = `
<section class="page">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">SearchPage.title.searchTerm</span></stickysubheader-stub>
  <div class="container grid">
    <div class="full-width">
      <section class="page-section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.maps</div>
        <!---->
        <ul class="grid-cell grid-cell--col12">
          <div class="is-caption text maps--empty">
            SearchPage.emptyText.maps
          </div>
        </ul>
        <!---->
      </section>
      <section class="page__section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.data</div>
        <ul class="grid-cell grid-cell--col12">
          <div class="is-caption text">
            SearchPage.emptyText.datasets
          </div>
        </ul>
        <!---->
        <!---->
      </section>
    </div>
  </div>
</section>
`;

exports[`Search.vue Rendering should render fetching state correctly 1`] = `
<section class="page">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">
      SearchPage.title.allFetching
      <span class="loading"><img svg-inline="" src="../assets/icons/common/loading.svg" class="loading__svg"></span></span></stickysubheader-stub>
  <div class="container grid">
    <div class="full-width">
      <section class="page-section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.maps</div>
        <ul class="grid-cell grid-cell--col12">
          <li class="search-item">
            <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
          </li>
          <li class="search-item">
            <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
          </li>
          <li class="search-item">
            <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
          </li>
          <li class="search-item">
            <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
          </li>
          <li class="search-item">
            <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
          </li>
          <li class="search-item">
            <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
          </li>
        </ul>
        <!---->
        <!---->
      </section>
      <section class="page__section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.data</div>
        <!---->
        <ul class="grid-cell grid-cell--col12">
          <li class="search-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
          <li class="search-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
          <li class="search-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
          <li class="search-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
          <li class="search-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
          <li class="search-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
        </ul>
        <!---->
      </section>
    </div>
  </div>
</section>
`;

exports[`Search.vue Rendering should render search results correctly 1`] = `
<section class="page">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">SearchPage.title.searchTerm</span></stickysubheader-stub>
  <div class="container grid">
    <div class="full-width">
      <section class="page-section has-pagination">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.maps</div>
        <!---->
        <ul class="grid-cell grid-cell--col12">
          <li class="search-item">
            <mapcard-stub visualization="[object Object]" storeactiontype="search" condensed="true"></mapcard-stub>
          </li>
          <li class="search-item">
            <mapcard-stub visualization="[object Object]" storeactiontype="search" condensed="true"></mapcard-stub>
          </li>
          <!---->
        </ul>
        <pagination-stub page="1" numpages="2"></pagination-stub>
      </section>
      <section class="page__section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.data</div>
        <ul class="grid-cell grid-cell--col12">
          <li class="search-item">
            <datasetcard-stub dataset="[object Object]" storeactiontype="search"></datasetcard-stub>
          </li>
          <li class="search-item">
            <datasetcard-stub dataset="[object Object]" storeactiontype="search"></datasetcard-stub>
          </li>
          <!---->
        </ul>
        <!---->
        <pagination-stub page="1" numpages="2" class="pagination-element"></pagination-stub>
      </section>
    </div>
  </div>
</section>
`;
